removed the parent folder that GitHub doesn't have

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
   <style>
-@font-face {font-family: SESAME; src:url("thats-right-baby/OPTIAlternateOne.otf");
+@font-face {font-family: SESAME; src:url("OPTIAlternateOne.otf");
 }
 
   body {
-    background-image: url('thats-right-baby/elmo.jpg');
+    background-image: url('elmo.jpg');
     background-size: cover;
 
 }
@@ -73,7 +73,7 @@
 -->
 
         <button class="button-primary" value="PLAY" onclick="play()">That's right BABY!</button>
-        <audio id="audio" src="thats-right-baby/thats-right-baby.mp3"></audio>
+        <audio id="audio" src="thats-right-baby.mp3"></audio>
 
 
       </div>
